--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -50,3 +50,18 @@ services:
       ports:
         - 8686:8686
       restart: unless-stopped
+      
+        jackett:
+    image: linuxserver/jackett
+    container_name: jackett
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Chicago
+      - RUN_OPTS=run options here #optional
+    volumes:
+      - /docker/sonarr/config:/config
+      - /mnt/nas/Downloads/:/downloads
+    ports:
+      - 9117:9117
+    restart: unless-stopped
