--- a/guacozy/docker-compose.yml
+++ b/guacozy/docker-compose.yml
@@ -22,6 +22,5 @@ services:
     image: postgres:10.4-alpine
     restart: always
     volumes:
-    - postgres-data:/var/lib/postgresql/data
-volumes:
-  postgres-data:
+    - /docker/guacozy/db:/var/lib/postgresql/data
+
