--- a/unifi/docker-compose.yml
+++ b/unifi/docker-compose.yml
@@ -19,3 +19,9 @@ services:
       - 8880:8880
       - 6789:6789
     restart: unless-stopped
+    networks:
+      - unifi
+networks:
+  unifi:
+    external: true
+
