--- a/guacozy/docker-compose.yml
+++ b/guacozy/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     ports:
       - 10080:80
       - 10443:443
+    volumes:
+      - /docker/ssh/acme:/ssl
   guacd:
     image: guacamole/guacd
     restart: always
