--- a/unifi/docker-compose.yml
+++ b/unifi/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.5"
 services:
   unifi-controller:
-    networks: host
+    network: host
     image: linuxserver/unifi-controller
     container_name: unifi-controller
     environment:
