--- a/unifi/docker-compose.yml
+++ b/unifi/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.5"
 services:
   unifi-controller:
-    network: host
     image: linuxserver/unifi-controller
     container_name: unifi-controller
     environment:
@@ -21,8 +20,8 @@ services:
       - 8880:8880
       - 6789:6789
     restart: unless-stopped
-#    networks:
-#      - unifi
+    networks:
+      - host
 
 #networks:
 #  unifi:
