--- a/unifi/docker-compose.yml
+++ b/unifi/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - 8880:8880
       - 6789:6789
     restart: unless-stopped
-    networks:
+    network:
       - host
 
 #networks:
