--- a/unifi/docker-compose.yml
+++ b/unifi/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.4"
 services:
   unifi-controller:
     image: linuxserver/unifi-controller
@@ -20,8 +20,7 @@ services:
       - 8880:8880
       - 6789:6789
     restart: unless-stopped
-    network:
-      - host
+    network: host
 
 #networks:
 #  unifi:
