--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -16,4 +16,4 @@ services:
       - /mnt/nas/Music:/music
       - /mnt/nas/Mobile\ Pictures:/mobile
       - /mnt/nas/My\ Pictures:/pictures
-      - /mnt/nas/Plex/Application\ Support/Plex\ Media\ Server/Metadata/:/var/lib/plexmediaserver/Library/Application\ Support/Plex\ Media\ Server/Metadata
+      - /mnt/nas/Plex/Metadata/:/var/lib/plexmediaserver/Library/Application\ Support/Plex\ Media\ Server/Metadata
