--- a/ombi/docker-compose.yml
+++ b/ombi/docker-compose.yml
@@ -9,7 +9,12 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
+    networks:
+      - DockerInternal  
     ports:
       - 80:3579
     volumes:
       - /docker/ombi/config/:/config
+  networks:
+    DockerInternal:
+      external: true
