--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       - TZ=America/Chicago
       - PLEX_CLAIM=zcR1z2DrYcNwn8Fgsx8d
-    network_mode: host
+      networks:
+        - DockerInternal
     volumes:
       - /docker/plex/config/plexmediaserver:/config
       - /mnt/trancode:/transcode
@@ -17,3 +18,6 @@ services:
       - /mnt/nas/Mobile\ Pictures:/mobile
       - /mnt/nas/My\ Pictures:/pictures
       - /mnt/nas/Plex/Metadata/:/var/lib/plexmediaserver/Library/Application\ Support/Plex\ Media\ Server/Metadata
+  networks:
+    DockerInternal:
+      external: true
