--- a/unifi/docker-compose.yml
+++ b/unifi/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - /docker/unifi/config:/config
       - /docker/ssh/acme:/unifi/cert
+    networks:
+      - DockerInternal
     ports:
       - 3478:3478/udp
       - 10001:10001/udp
@@ -20,3 +22,6 @@ services:
       - 8880:8880
       - 6789:6789
     restart: unless-stopped
+  networks:
+    DockerInternal:
+      external: true
