--- a/deluge/docker-compose.yml
+++ b/deluge/docker-compose.yml
@@ -12,13 +12,12 @@ services:
       - TZ=America/Chicago
       - UMASK_SET=022 #Optional
       - DELUGE_LOGLEVEL=error #Optional
-    networks:
-      - DockerInternal
+    #networks: DockerInternal
     ports:
       - 8112:8112
     volumes:
       - /docker/deluge/config:/config
       - /mnt/nas/Downloads/deluge:/downloads
-  networks:
-    DockerInternal:
-      external: true
+#  networks:
+#    DockerInternal:
+#      external: true
