--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - TZ=America/Chicago
       - PLEX_CLAIM=zcR1z2DrYcNwn8Fgsx8d
-    network_mode: DocketInternal
+    network_mode: DockerInternal
 #    networks:
 #      - DockerInternal
     volumes:
