--- a/ombi/docker-compose.yml
+++ b/ombi/docker-compose.yml
@@ -9,13 +9,8 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
-#    networks:
-#      - DockerInternal  
+    network_mode: DockerInternal  
     ports:
       - 80:3579
     volumes:
       - /docker/ombi/config:/config
-
-#  networks:
-#    DockerInternal:
-#      external: true
