Cleaned up network

--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -13,8 +13,7 @@ services:
       - /mnt/nas/Tv \Shows:/tv
       - /mnt/nas/Downloads/nzb:/downloadsnzb
       - /mnt/nas/Downloads/Complete:/downloadstor
-    networks:
-      - DockerInternal
+    network_mode: DockerInternal
     ports:
       - 8989:8989
     restart: unless-stopped
@@ -32,8 +31,7 @@ services:
         - /mnt/nas/Movies:/movies
         - /mnt/nas/Downloads/nzb:/downloadsnzb
         - /mnt/nas/Downloads/Complete:/downloadstor
-      networks:
-        - DockerInternal
+      network_mode: DockerInternal
       ports:
         - 7878:7878
       restart: unless-stopped
@@ -51,8 +49,7 @@ services:
         - /mnt/nas/Music:/music
         - /mnt/nas/Downloads/nzb:/downloadsnzb
         - /mnt/nas/Downloads/Complete:/downloadstor
-      networks:
-        - DockerInternal
+      network_mode: DockerInternal
       ports:
         - 8686:8686
       restart: unless-stopped
@@ -68,11 +65,7 @@ services:
     volumes:
       - /docker/sonarr/config:/config
       - /mnt/nas/Downloads/:/downloads
-    networks:
-      - DockerInternal
+    network_mode: DockerInternal
     ports:
       - 9117:9117
     restart: unless-stopped
-  networks:
-    DockerInternal:
-      external: true
