--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -9,7 +9,15 @@ services:
       - PLEX_CLAIM=zcR1z2DrYcNwn8Fgsx8d
     network_mode: DockerInternal
     ports:
+      - 3005:3005
+      - 8324:8324  
+      - 1900:1900/udp
       - 32400:32400
+      - 32410:32410/udp 
+      - 32412:32412/udp
+      - 32413:32413/udp
+      - 32414:32414/udp 
+      - 32469:32469
     volumes:
       - /docker/plex/config/plexmediaserver:/config
       - /mnt/trancode:/transcode
