--- a/sftp/docker-compose.yml
+++ b/sftp/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     restart: unless-stopped
     network_mode: DockerInternal
     volumes:
-      - /docker/sftp/users.conf/:/etc/sftp/users.conf:ro
+      - /Docker-Compose/sftp/users.conf:/etc/sftp/users.conf:ro
+      - /Docker-Compose/sftp/scripts/:/etc/sftp.d/
       - /mnt/nas/:/home
       - /docker/ssh/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key
       - /docker/ssh/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key
     ports:
-      - "9922:9922"
+      - "9922:22"
