--- a/deluge/docker-compose.yml
+++ b/deluge/docker-compose.yml
@@ -22,4 +22,4 @@ services:
       - /mnt/nas/Downloads/Complete:/complete
   networks:
     DockerInternal:
-#      external: true
+      external: true
