--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     ports:
       - 8989:8989
     restart: unless-stopped
+    external_links:
+      - deluge:deluge
 
   radarr:
       image: linuxserver/radarr
