Added External_links sonarr

--- a/deluge/docker-compose.yml
+++ b/deluge/docker-compose.yml
@@ -24,4 +24,6 @@ services:
       #DockerInternal:
     restart: unless-stopped   
     external_links:
-      - deluge:deluge
+      - sonarr:sonarr
+      - sonarr:radarr
+      - sonarr:lidar
