Modified Networking rm external_links

--- a/deluge/docker-compose.yml
+++ b/deluge/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - TZ=America/Chicago
       - UMASK_SET=022 #Optional
       - DELUGE_LOGLEVEL=error #Optional
-    #networks: DockerInternal
+    networks: 
+      - DockerInternal
     ports:
       - 8112:8112
     volumes:
@@ -20,10 +21,7 @@ services:
       - /mnt/nas/Downloads/deluge:/downloads
       - /mnt/nas/Downloads/torrents:/torrents
       - /mnt/nas/Downloads/Complete:/complete
-    #networks:
-      #DockerInternal:
     restart: unless-stopped   
-    external_links:
-      - sonarr:sonarr
-      - sonarr:radarr
-      - sonarr:lidar
+  networks:
+    DockerInternal:
+      external: true
