--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -27,4 +27,4 @@ services:
       - /mnt/nas/Music:/music
       - "/mnt/nas/Mobile\ Pictures:/mobile"
       - "/mnt/nas/My\ Pictures:/pictures"
-      - "/mnt/nas/Plex/Metadata/:/var/lib/plexmediaserver/Library/Application\ Support/Plex\ Media\ Server/Metadata"
+      - "/vmdk2/Metadata:/var/lib/plexmediaserver/Library/Application\ Support/Plex\ Media\ Server/Metadata"
