Added SSL volume to vscode

--- a/vscode/docker-compose.yml
+++ b/vscode/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       #- SUDO_PASSWORD=password #optional
     volumes:
       - /docker/vscode/config:/config
+      - /docker/ssh/acme:/ssl
     network_mode: DockerInternal
     ports:
       - 8443:8443
