Added /nzb to LL

--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -115,6 +115,7 @@ services:
     volumes:
       - /docker/lazylibrarian/config:/config
       - /mnt/nas/Library/:/library
+      - /mnt/nas/Downloads/nzb/nzb:/watch
       - /mnt/nas/Downloads/nzb:/downloadsnzb
       - /mnt/nas/Downloads/Complete:/downloadstor
     ports:
