--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   sonarr:
-    image: linuxserver/sonarr
+    image: linuxserver/sonarr:preview
     container_name: sonarr
     environment:
       - PUID=1000
