--- a/calibre/docker-compose.yml
+++ b/calibre/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     volumes:
       - /docker/calibre-web/config:/config
       - /mnt/nas/Library/Books:/books
-      - "/docker/calibre/config/Calibre\ Library/:/library"
+      - /mnt/nas/Library/Books/calibre:/library
     network_mode: DockerInternal
     ports:
       - 8083:8083
