--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   sonarr:
-    image: linuxserver/sonarr:preview
+    image: ghcr.io/linuxserver/sonarr:latest
     container_name: sonarr
     environment:
       - PUID=1000
@@ -19,7 +19,7 @@ services:
     restart: unless-stopped
 
   radarr:
-      image: ghcr.io/linuxserver/radarr
+      image: ghcr.io/linuxserver/radarr:latest
       container_name: radarr
       environment:
         - PUID=1000
@@ -37,7 +37,7 @@ services:
       restart: unless-stopped
 
   lidarr:
-      image: ghcr.io/linuxserver/lidarr
+      image: ghcr.io/linuxserver/lidarr:latest
       container_name: lidarr
       environment:
         - PUID=1000
@@ -70,42 +70,42 @@ services:
       - 9117:9117
     restart: unless-stopped
 
-  mylar:
-    image: ghcr.io/linuxserver/mylar
-    container_name: mylar
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Chicago
-    volumes:
-      - /docker/mylar/config:/config
-      - /mnt/nas/Library/Comics:/comics
-      - /mnt/nas/Downloads/nzb:/downloadsnzb
-      - /mnt/nas/Downloads/Complete:/downloadstor
-    network_mode: DockerInternal
-    ports:
-      - 8090:8090
-    restart: unless-stopped
+#  mylar:
+#    image: ghcr.io/linuxserver/mylar
+#    container_name: mylar
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - TZ=America/Chicago
+#    volumes:
+#      - /docker/mylar/config:/config
+#      - /mnt/nas/Library/Comics:/comics
+#      - /mnt/nas/Downloads/nzb:/downloadsnzb
+#      - /mnt/nas/Downloads/Complete:/downloadstor
+#    network_mode: DockerInternal
+#    ports:
+#      - 8090:8090
+#    restart: unless-stopped
 
-  readarr:
-    image: hotio/readarr:unstable
-    container_name: readarr
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Chicago
-    volumes:
-      - /docker/readarr/config:/config
-      - /mnt/nas/Library/:/library
-      - /mnt/nas/Downloads/nzb:/downloadsnzb
-      - /mnt/nas/Downloads/Complete:/downloadstor
-    network_mode: DockerInternal
-    ports:
-      - 8787:8787
-    restart: unless-stopped
+#  readarr:
+#    image: hotio/readarr:unstable
+#    container_name: readarr
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - TZ=America/Chicago
+#    volumes:
+#      - /docker/readarr/config:/config
+#      - /mnt/nas/Library/:/library
+#      - /mnt/nas/Downloads/nzb:/downloadsnzb
+#      - /mnt/nas/Downloads/Complete:/downloadstor
+#    network_mode: DockerInternal
+#    ports:
+#      - 8787:8787
+#    restart: unless-stopped
 
   lazylibrarian:
-    image: ghcr.io/linuxserver/lazylibrarian
+    image: ghcr.io/linuxserver/lazylibrarian:latest
     container_name: lazylibrarian
     environment:
       - PUID=1000
