--- a/muximux/docker-compose.yml
+++ b/muximux/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   muximux:
-    image: ghcr.io/linuxserver/muximux
+    image: ghcr.io/linuxserver/muximux:latest
     container_name: muximux
     environment:
       - PUID=1000
