--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       WATCHTOWER_NOTIFICATIONS: slack
       WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL: "https://discordapp.com/api/webhooks/732244627842793543/pz0yw2i0vedIQoz7TJpGvPUUTFO_vdQvtu_blS9-yeWbzXb8m6FdNnAdFNRLSkqrv9tJ/slack"
       WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER: DockerBot
+      WATCHTOWER_NOTIFICATIONS_LEVEL: error
     network_mode: DockerInternal
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
