--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   watchtower:
     image: v2tec/watchtower
     container_name: watchtower
+    restart: unless-stopped
     environment:
       #- TZ=America/Chicago
       WATCHTOWER_NOTIFICATIONS: slack
