--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -14,4 +14,4 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 #      - /docker/watchtower/.docker/config.json:/config.json
-    command: --schedule "0 0 5 * * *" --cleanup
+    command: --interval 3600
