--- a/ombi/docker-compose.yml
+++ b/ombi/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 services:
   ombi:
-    image: ghcr.io/linuxserver/ombi:latest
+    image: lscr.io/linuxserver/ombi:latest
     container_name: ombi
     restart: unless-stopped
     environment:
