--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   sonarr:
-    image: ghcr.io/linuxserver/sonarr:latest
+    image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr
     environment:
       - PUID=1000
@@ -19,7 +19,7 @@ services:
     restart: unless-stopped
 
   radarr:
-      image: ghcr.io/linuxserver/radarr:latest
+      image: lscr.io/linuxserver/radarr:latest
       container_name: radarr
       environment:
         - PUID=1000
@@ -37,7 +37,7 @@ services:
       restart: unless-stopped
 
   lidarr:
-      image: ghcr.io/linuxserver/lidarr:latest
+      image: lscr.io/linuxserver/lidarr:latest
       container_name: lidarr
       environment:
         - PUID=1000
@@ -55,7 +55,7 @@ services:
       restart: unless-stopped
       
   jackett:
-    image: ghcr.io/linuxserver/jackett:latest
+    image: lscr.io/linuxserver/jackett:latest
     container_name: jackett
     environment:
       - PUID=1000
@@ -71,7 +71,7 @@ services:
     restart: unless-stopped
     
   prowlarr:
-    image: ghcr.io/linuxserver/prowlarr:develop
+    image: lscr.io/linuxserver/prowlarr:develop
     container_name: prowlarr
     environment:
       - PUID=1000
@@ -86,7 +86,7 @@ services:
     restart: unless-stopped
 
   mylar3:
-    image: ghcr.io/linuxserver/mylar3
+    image: lscr.io/linuxserver/mylar3
     container_name: mylar3
     environment:
       - PUID=1000
@@ -120,7 +120,7 @@ services:
 #    restart: unless-stopped
 
   lazylibrarian:
-    image: ghcr.io/linuxserver/lazylibrarian:latest
+    image: lscr.io/linuxserver/lazylibrarian:latest
     container_name: lazylibrarian
     environment:
       - PUID=1000
