--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - /mnt/nas/bk/Traefik/acme.json:/acme.json
       - /mnt/nas/bk/Traefik/traefik.yml:/etc/traefik/traefik.yml
       - /mnt/nas/bk/Traefik/letsencrypt:/letsencrypt
-      - /mnt/nas/bk/Traefik/logs:/logs
+      #- /mnt/nas/bk/Traefik/logs:/logs
     network_mode: DockerExternal
     labels:
       - traefik.http.routers.traefik.tls=true
