Comment out traefik.yml

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - /mnt/nas/bk/Traefik/traefik.toml:/traefik.toml
       - /mnt/nas/bk/Traefik/traefik_dynamic.toml:/traefik_dynamic.toml
       - /mnt/nas/bk/Traefik/acme.json:/acme.json
-      - /mnt/nas/bk/Traefik/traefik.yml:/etc/traefik/traefik.yml
+      #- /mnt/nas/bk/Traefik/traefik.yml:/etc/traefik/traefik.yml
       - /mnt/nas/bk/Traefik/letsencrypt:/letsencrypt
       #- /mnt/nas/bk/Traefik/logs:/logs
     network_mode: DockerExternal
