Updated to 2.3.1 from 2.2

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
   traefik:
-    image: traefik:v2.2
+    image: traefik:v2.3.1
     container_name: traefik
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Chicago
+    #environment:
+     # - PUID=1000
+      #- PGID=1000
+      #- TZ=America/Chicago
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       #- /mnt/nas/bk/Traefik/traefik.toml:/traefik.toml
