--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,21 +1,20 @@
-version: '3'
+version: '3.5'
 services:
   traefik:
-    image: traefik:v2.3.1
+    image: "traefik:v2.3.1:
     container_name: traefik
-    #environment:
-     # - PUID=1000
-      #- PGID=1000
-      #- TZ=America/Chicago
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Chicago
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       #- /mnt/nas/bk/Traefik/traefik.toml:/traefik.toml
       - /mnt/nas/bk/Traefik/traefik.yml:/etc/traefik/traefik.yml
-      - /mnt/nas/bk/Traefik/traefik_dynamic.toml:/traefik_dynamic.toml
+      #- /mnt/nas/bk/Traefik/traefik_dynamic.toml:/traefik_dynamic.toml
       - /mnt/nas/bk/Traefik/acme.json:/acme.json
-
       - /mnt/nas/bk/Traefik/letsencrypt:/letsencrypt
-      #- /mnt/nas/bk/Traefik/logs:/logs
+      - /mnt/nas/bk/Traefik/logs:/logs
     network_mode: DockerExternal
     labels:
       - traefik.http.routers.traefik.tls=true
