--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -30,7 +30,8 @@ services:
       - 80:80
       - 443:443
       - 8088:8880
-    restart: unless-stopped 
+    #restart: unless-stopped 
+    
 networks:
   DockerExternal:
     external: true
