--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   traefik:
-    image: "traefik:v2.3.1:
+    image: "traefik:v2.3.1"
     container_name: traefik
     environment:
       - PUID=1000
@@ -30,7 +30,7 @@ services:
       - 80:80
       - 443:443
       - 8088:8880
-    #restart: unless-stopped 
+    restart: unless-stopped 
     
 networks:
   DockerExternal:
