--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -30,7 +30,16 @@ services:
       - 80:80
       - 443:443
     restart: unless-stopped 
-    
+
+  whoami:
+    image: "traefik/whoami"
+    container_name: "simple-service"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.whoami.rule=Host(`who.tuckeredoutbert.com` || `who`)  # replace gf.cloudwatch.net with you domain name, leave /gf unchanged for now  
+      - traefik.http.routers.whoami.entrypoints=web-secure
+      - traefik.http.routers.whoami.tls.certresolver=lets-encrypt
+
 networks:
   DockerExternal:
     external: true
