--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -18,14 +18,14 @@ services:
     network_mode: DockerExternal
     labels:
       - traefik.http.routers.traefik.tls=true
-      - traefik.http.routers.traefik.rule=Host(`traefik.tuckeredoutbert.com` || 'traefik')
-      - traefik.http.routers.traefik.tls.certresolver=lets-encrypt
+      #- traefik.http.routers.traefik.rule=Host(`traefik.tuckeredoutbert.com` || 'traefik')
+      #- traefik.http.routers.traefik.tls.certresolver=lets-encrypt
       #- traefik.http.routers.traefik.tls.domains[0].main=tuckeredoutbert.com
       #- traefik.http.routers.traefik.tls.domains[0].sans=*.tuckeredoutbert.com,turkeredoutbert.com
-      - traefik.http.routers.traefik.entrypoints=web-secure
+      #- traefik.http.routers.traefik.entrypoints=web-secure
       - traefik.docker.network=DockerExternal
     networks:
-     DockerExternal:
+      DockerExternal:
     ports:
       - 80:80
       - 443:443
@@ -39,6 +39,9 @@ services:
       - traefik.http.routers.whoami.rule=Host(`who.tuckeredoutbert.com` || `who`)  # replace gf.cloudwatch.net with you domain name, leave /gf unchanged for now  
       - traefik.http.routers.whoami.entrypoints=web-secure
       - traefik.http.routers.whoami.tls.certresolver=lets-encrypt
+      - traefik.docker.network=DockerExternal
+    networks:
+      DockerExternal:
 
 networks:
   DockerExternal:
