--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -18,11 +18,11 @@ services:
     network_mode: DockerExternal
     labels:
       - traefik.http.routers.traefik.tls=true
-      #- traefik.http.routers.traefik.rule=Host(`traefik.tuckeredoutbert.com` || 'traefik')
-      #- traefik.http.routers.traefik.tls.certresolver=lets-encrypt
-      #- traefik.http.routers.traefik.tls.domains[0].main=tuckeredoutbert.com
-      #- traefik.http.routers.traefik.tls.domains[0].sans=*.tuckeredoutbert.com,turkeredoutbert.com
-      #- traefik.http.routers.traefik.entrypoints=web-secure
+      - traefik.http.routers.traefik.rule=Host(`traefik.tuckeredoutbert.com` || 'traefik')
+      - traefik.http.routers.traefik.tls.certresolver=lets-encrypt
+      - traefik.http.routers.traefik.tls.domains[0].main=tuckeredoutbert.com
+      - traefik.http.routers.traefik.tls.domains[0].sans=*.tuckeredoutbert.com,turkeredoutbert.com
+      - traefik.http.routers.traefik.entrypoints=web-secure
       - traefik.docker.network=DockerExternal
     networks:
       DockerExternal:
@@ -42,7 +42,10 @@ services:
       - traefik.docker.network=DockerExternal
     networks:
       DockerExternal:
+      DockerInternal:
 
 networks:
   DockerExternal:
+    external: true
+  DockerInternal:
     external: true
