--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - traefik.http.routers.traefik.tls.domains[0].sans=*.tuckeredoutbert.com,turkeredoutbert.com
       - traefik.http.routers.traefik.entrypoints=web-secure
       - traefik.docker.network=DockerExternal
+    env_file: /mnt/nas/bk/traefik/traefik.env  
     networks:
       DockerExternal:
     ports:
