--- a/ombi/docker-compose.yml
+++ b/ombi/docker-compose.yml
@@ -9,9 +9,27 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Chicago
-    network_mode: DockerInternal  
-    ports:
-      - 80:3579
+    #network_mode: DockerInternal  
+    #ports:
+    #  - 80:3579
     volumes:
       - /docker/ombi/config:/config
-      - /docker/ssh/acme:/ssl
+      #- /docker/ssh/acme:/ssl
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.ombi.rule=Host(`ombi.tuckeredoutbert.com`)  
+      - traefik.http.routers.ombi.entrypoints=web-secure
+      - traefik.http.routers.ombi.tls.certresolver=lets-encrypt
+      - traefik.docker.network=DockerExternal
+    networks:
+      DockerExternal:
+      DockerInternal:
+    #network_mode: DockerInternal
+    #ports:
+    #  - 8011:8080
+    restart: unless-stopped
+networks:
+  DockerExternal:
+    external: true
+  DockerInternal:
+    external: true
